= Release Notes

== Version 3.3.0.rc1
* protect against duplicate handler execution by keeping the status of
  handler exectution for both redundant and non-redundant messages in
  the dedup store for a configurable time window. The config option
  is named redis_status_key_expiry_interval. Note that this will
  significantly increase the cpu load and memory usage of the Redis
  server for applications using a large number of non-redundant messages.

== Version 3.2.0
* added currently processed message to the handler pre-processing step

== Version 3.1.0
* added more debug log statements
* added new callbacks on class Beetle::Handler:
  * pre_process is called before any message processing commences
  * post_process is called after all processing has been completed
  these handlers can be used for logging purposes (such as logjam
  integration)

== Version 3.0.0

* provide client method to setup queues and queue policies.
  Setting up queue policies on demand in publisher and subscriber is OK
  for a small number of queues, publishers and subscribers. But the HTTP
  API of RabbitMQ doesn't scale all that well, so that a large number
  of HTTP calls to set up queue policies can in fact crash a server.
* allow queue mode specification and dead lettering specification on a
  per queue basis.
* change policy setup to be asynchronous, on demand in publisher and
  consumer. Users have to run a processors to listen to messages and
  call setup_queue_policies! with the parses JSON paylod of the
  message.
* store redis gc stats in redis and display them in the configuration
  server web UI
* config server: store current master server in consul, if consul
  config has been provided.
* config server: server correctly updates configured client ids when
  they change in consul.
* don't create dead letter queues when using the trace functionality
* make sure to clean dedup store when ack_count is larger than 2
* added dump_expiries command to beetle to dump dediplication store